Updated to Version 3
Updated to Version 3
Added the Rook Armor Set
All variants now crafted through the builder station.

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,17 @@
 {
-  "Group": "LadyPaladra",
-  "Name": "The Armory",
-  "Version": "1.0.0",
+  "Group": "The Armory",
+  "Name": "LadyPaladra",
+  "Version": "1.6.0",
   "Description": "",
-  "Authors": [],
+  "Authors": [
+    {
+      "Name": "LadyPaladra",
+      "Email": "",
+      "Url": ""
+    }
+  ],
   "Website": "",
+  "ServerVersion": "2026.02.19-1a311a592",
   "Dependencies": {},
   "OptionalDependencies": {},
   "LoadBefore": {},
